// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`maintenance presentation > snapshots narrow color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "LIFTOFF / UPDATE - Preview and explicitly approve scoped project updates

[1mSelected project[22m
Root: <project>

[1mProject versions[22m
Liftoff CLI: 0.11.2
Project generated by: 0.11.2

[1mLiftoff core drift[22m
Change: ~ | Artifact: .liftoff/governance/context.json | Reason: untouched since generation; template changed

[1mProject component provisioning: environment:staging[22m
- create environments/staging/backend.env  destination is absent
- create infrastructure/opentofu/azure/environments/staging/versions.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/.terraform.lock.hcl  destination is absent
- create infrastructure/opentofu/azure/environments/staging/providers.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/variables.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/main.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/outputs.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/backend.local.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/backend.remote.example.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/staging.tfvars  destination is absent

[1mReviewed update plan[22m
Fingerprint: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
Static file operations: 12
Eligible: yes; explicit approval still required

[1mSeparately reviewed forced plan[22m
Fingerprint: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
Static file operations: 12
Eligible: yes; explicit approval still required

[1mExternal preview receipt[22m
Location: <preview-store>/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.json
Project bytes: unchanged; this receipt is not approval

[35m$[39m [1mliftoff update[22m
[33m[warn][39m [1mLiftoff core maintenance available[22m: 0 core conflict(s); review the exact plans before approval
",
}
`;

exports[`maintenance presentation > snapshots narrow no-color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "LIFTOFF / UPDATE - Preview and explicitly approve scoped project updates

Selected project
Root: <project>

Project versions
Liftoff CLI: 0.11.2
Project generated by: 0.11.2

Liftoff core drift
Change: ~ | Artifact: .liftoff/governance/context.json | Reason: untouched since generation; template changed

Project component provisioning: environment:staging
- create environments/staging/backend.env  destination is absent
- create infrastructure/opentofu/azure/environments/staging/versions.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/.terraform.lock.hcl  destination is absent
- create infrastructure/opentofu/azure/environments/staging/providers.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/variables.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/main.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/outputs.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/backend.local.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/backend.remote.example.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/staging.tfvars  destination is absent

Reviewed update plan
Fingerprint: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
Static file operations: 12
Eligible: yes; explicit approval still required

Separately reviewed forced plan
Fingerprint: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
Static file operations: 12
Eligible: yes; explicit approval still required

External preview receipt
Location: <preview-store>/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.json
Project bytes: unchanged; this receipt is not approval

$ liftoff update
[warn] Liftoff core maintenance available: 0 core conflict(s); review the exact plans before approval
",
}
`;

exports[`maintenance presentation > snapshots plain doctor layers and remedies 1`] = `
{
  "code": 1,
  "err": "",
  "out": "LIFTOFF / DOCTOR - Inspect CLI, workstation, project, runtime, and cloud readiness

CLI
[ok] version: Liftoff 0.11.2

Environment
[ok] node: Version 24.20.0
[ok] npm: Version 12.0.2
[ok] python: Version 3.14.0
[ok] uv: Version 0.12.7
[ok] docker: Version 27.0.0
[ok] Docker daemon: 27.0.0
[ok] opentofu: Version 1.12.6
[ok] azure-cli: Version 2.70.0
[ok] Azure authentication: Healthy
[ok] openspec: Version 1.11.0
[ok] github-copilot: Version 1.0.0
[warn] GitHub Copilot authentication: Liftoff does not automate or persist Copilot credentials. - Run \`copilot\` and sign in if prompted.

Project
[ok] manifest: valid, 8 managed core and 50 project provenance entries
[ok] version: generated by 0.11.2, CLI 0.11.2
[ok] repository governance: local single-maintainer-gitflow policy 6 handoff is intact; live enforcement is not inferred
[warn] governance seed: Generated OpenSpec seed bootstrap-presentation-app is still active; archive it before governance creation. - Run /liftoff-setup to complete, sync, and archive the generated seed before governance activation.
[ok] framework contract: OpenSpec 1.11.0
[ok] selected agents: github-copilot
[ok] framework markers: 1 selected integration verified
[ok] python-fastapi project: stack configuration is valid
[ok] managed core: Liftoff core is current; project templates are not compared

Runtime
[error] .env: missing - copy .env.example to .env
[ok] compose: docker compose config is valid

Cloud - azure
[ok] azure auth: authenticated

[error] Doctor summary: 1 failure(s), 2 warning(s)
",
}
`;

exports[`maintenance presentation > snapshots plain update completion recommendation 1`] = `
{
  "code": 0,
  "err": "",
  "out": "LIFTOFF / UPDATE - Preview and explicitly approve scoped project updates

Selected project
Root: <project>

[warn] Warning: If this worktree has uncommitted changes, consider committing or copying them before applying. Liftoff does not commit automatically.
Review before approval
- Effective normal plan: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
- write ".liftoff/governance/context.json"
- write "environments/staging/backend.env"
- write "infrastructure/opentofu/azure/environments/staging/versions.tf"
- write "infrastructure/opentofu/azure/environments/staging/.terraform.lock.hcl"
- write "infrastructure/opentofu/azure/environments/staging/providers.tf"
- write "infrastructure/opentofu/azure/environments/staging/variables.tf"
- write "infrastructure/opentofu/azure/environments/staging/main.tf"
- write "infrastructure/opentofu/azure/environments/staging/outputs.tf"
- write "infrastructure/opentofu/azure/environments/staging/backend.local.tf"
- write "infrastructure/opentofu/azure/environments/staging/backend.remote.example.tf"
- write "infrastructure/opentofu/azure/environments/staging/staging.tfvars"
- write "liftoff.manifest.json"
- Only this exact local plan is authorized; future provider actions require separate approval.

Stage: Apply safe Liftoff core changes
<project>
Applied Liftoff core changes
- wrote .liftoff/governance/context.json

[ok] Updated project: 1 core written, 0 core skipped
Next recommended command
$ liftoff validate && liftoff doctor

",
}
`;

exports[`maintenance presentation > snapshots plain update drift 1`] = `
{
  "code": 2,
  "err": "",
  "out": "LIFTOFF / UPDATE - Preview and explicitly approve scoped project updates

Selected project
Root: <project>

Project versions
Liftoff CLI: 0.11.2
Project generated by: 0.11.2

Liftoff core drift
Change: ~ | Artifact: .liftoff/governance/context.json | Reason: untouched since generation; template changed

Project component provisioning: environment:staging
- create environments/staging/backend.env  destination is absent
- create infrastructure/opentofu/azure/environments/staging/versions.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/.terraform.lock.hcl  destination is absent
- create infrastructure/opentofu/azure/environments/staging/providers.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/variables.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/main.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/outputs.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/backend.local.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/backend.remote.example.tf  destination is absent
- create infrastructure/opentofu/azure/environments/staging/staging.tfvars  destination is absent

Reviewed update plan
Fingerprint: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
Static file operations: 12
Eligible: yes; explicit approval still required

Separately reviewed forced plan
Fingerprint: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
Static file operations: 12
Eligible: yes; explicit approval still required

External preview receipt
Location: <preview-store>/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.json
Project bytes: unchanged; this receipt is not approval

$ liftoff update
[warn] Liftoff core maintenance available: 0 core conflict(s); review the exact plans before approval
",
}
`;

exports[`maintenance presentation > snapshots rich color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "┌─ [1m[36mLIFTOFF / UPDATE[39m[22m ───────────────────────────────────────────────────────────────────────────┐
│ [2mPreview and explicitly approve scoped project updates[22m                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mSelected project[39m[22m ───────────────────────────────────────────────────────────────────────────┐
│ Root  <project>                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mProject versions[39m[22m ───────────────────────────────────────────────────────────────────────────┐
│ Liftoff CLI           0.11.2                                                                 │
│ Project generated by  0.11.2                                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mLiftoff core drift[39m[22m ─────────────────────────────────────────────────────────────────────────┐
│ [1mChange  Artifact                          Reason[22m                                             │
│ [2m──────  ────────────────────────────────  ────────────────────────────────────────────[22m       │
│ ~       .liftoff/governance/context.json  untouched since generation; template changed       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mProject component provisioning: environment:staging[39m[22m ────────────────────────────────────────┐
│ • create environments/staging/backend.env  destination is absent                             │
│ • create infrastructure/opentofu/azure/environments/staging/versions.tf destination is       │
│ absent                                                                                       │
│ • create infrastructure/opentofu/azure/environments/staging/.terraform.lock.hcl destination  │
│ is absent                                                                                    │
│ • create infrastructure/opentofu/azure/environments/staging/providers.tf destination is      │
│ absent                                                                                       │
│ • create infrastructure/opentofu/azure/environments/staging/variables.tf destination is      │
│ absent                                                                                       │
│ • create infrastructure/opentofu/azure/environments/staging/main.tf  destination is absent   │
│ • create infrastructure/opentofu/azure/environments/staging/outputs.tf destination is absent │
│ • create infrastructure/opentofu/azure/environments/staging/backend.local.tf destination is  │
│ absent                                                                                       │
│ • create infrastructure/opentofu/azure/environments/staging/backend.remote.example.tf        │
│ destination is absent                                                                        │
│ • create infrastructure/opentofu/azure/environments/staging/staging.tfvars destination is    │
│ absent                                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mReviewed update plan[39m[22m ───────────────────────────────────────────────────────────────────────┐
│ Fingerprint             aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa     │
│ Static file operations  12                                                                   │
│ Eligible                yes; explicit approval still required                                │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mSeparately reviewed forced plan[39m[22m ────────────────────────────────────────────────────────────┐
│ Fingerprint             aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa     │
│ Static file operations  12                                                                   │
│ Eligible                yes; explicit approval still required                                │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mExternal preview receipt[39m[22m ───────────────────────────────────────────────────────────────────┐
│ Location                                                                                     │
│ <preview-store>/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.json        │
│ Project bytes  unchanged; this receipt is not approval                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
[35m$[39m [1mliftoff update[22m
[33m![39m [1mLiftoff core maintenance available[22m: 0 core conflict(s); review the exact plans before approval
",
}
`;

exports[`maintenance presentation > snapshots rich doctor layers and remedies 1`] = `
{
  "code": 1,
  "err": "",
  "out": "┌─ LIFTOFF / DOCTOR ───────────────────────────────────────────────────────────────────────────┐
│ Inspect CLI, workstation, project, runtime, and cloud readiness                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ CLI ────────────────────────────────────────────────────────────────────────────────────────┐
│ ✓ version: Liftoff 0.11.2                                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Environment ────────────────────────────────────────────────────────────────────────────────┐
│ ✓ node: Version 24.20.0                                                                      │
│ ✓ npm: Version 12.0.2                                                                        │
│ ✓ python: Version 3.14.0                                                                     │
│ ✓ uv: Version 0.12.7                                                                         │
│ ✓ docker: Version 27.0.0                                                                     │
│ ✓ Docker daemon: 27.0.0                                                                      │
│ ✓ opentofu: Version 1.12.6                                                                   │
│ ✓ azure-cli: Version 2.70.0                                                                  │
│ ✓ Azure authentication: Healthy                                                              │
│ ✓ openspec: Version 1.11.0                                                                   │
│ ✓ github-copilot: Version 1.0.0                                                              │
│ ! GitHub Copilot authentication: Liftoff does not automate or persist Copilot credentials. - │
│ Run \`copilot\` and sign in if prompted.                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project ────────────────────────────────────────────────────────────────────────────────────┐
│ ✓ manifest: valid, 8 managed core and 50 project provenance entries                          │
│ ✓ version: generated by 0.11.2, CLI 0.11.2                                                   │
│ ✓ repository governance: local single-maintainer-gitflow policy 6 handoff is intact; live    │
│ enforcement is not inferred                                                                  │
│ ! governance seed: Generated OpenSpec seed bootstrap-presentation-app is still active;       │
│ archive it before governance creation. - Run /liftoff-setup to complete, sync, and archive   │
│ the generated seed before governance activation.                                             │
│ ✓ framework contract: OpenSpec 1.11.0                                                        │
│ ✓ selected agents: github-copilot                                                            │
│ ✓ framework markers: 1 selected integration verified                                         │
│ ✓ python-fastapi project: stack configuration is valid                                       │
│ ✓ managed core: Liftoff core is current; project templates are not compared                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Runtime ────────────────────────────────────────────────────────────────────────────────────┐
│ × .env: missing - copy .env.example to .env                                                  │
│ ✓ compose: docker compose config is valid                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Cloud - azure ──────────────────────────────────────────────────────────────────────────────┐
│ ✓ azure auth: authenticated                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
× Doctor summary: 1 failure(s), 2 warning(s)
",
}
`;

exports[`maintenance presentation > snapshots rich no-color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "┌─ LIFTOFF / UPDATE ───────────────────────────────────────────────────────────────────────────┐
│ Preview and explicitly approve scoped project updates                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Selected project ───────────────────────────────────────────────────────────────────────────┐
│ Root  <project>                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project versions ───────────────────────────────────────────────────────────────────────────┐
│ Liftoff CLI           0.11.2                                                                 │
│ Project generated by  0.11.2                                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Liftoff core drift ─────────────────────────────────────────────────────────────────────────┐
│ Change  Artifact                          Reason                                             │
│ ──────  ────────────────────────────────  ────────────────────────────────────────────       │
│ ~       .liftoff/governance/context.json  untouched since generation; template changed       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project component provisioning: environment:staging ────────────────────────────────────────┐
│ • create environments/staging/backend.env  destination is absent                             │
│ • create infrastructure/opentofu/azure/environments/staging/versions.tf destination is       │
│ absent                                                                                       │
│ • create infrastructure/opentofu/azure/environments/staging/.terraform.lock.hcl destination  │
│ is absent                                                                                    │
│ • create infrastructure/opentofu/azure/environments/staging/providers.tf destination is      │
│ absent                                                                                       │
│ • create infrastructure/opentofu/azure/environments/staging/variables.tf destination is      │
│ absent                                                                                       │
│ • create infrastructure/opentofu/azure/environments/staging/main.tf  destination is absent   │
│ • create infrastructure/opentofu/azure/environments/staging/outputs.tf destination is absent │
│ • create infrastructure/opentofu/azure/environments/staging/backend.local.tf destination is  │
│ absent                                                                                       │
│ • create infrastructure/opentofu/azure/environments/staging/backend.remote.example.tf        │
│ destination is absent                                                                        │
│ • create infrastructure/opentofu/azure/environments/staging/staging.tfvars destination is    │
│ absent                                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Reviewed update plan ───────────────────────────────────────────────────────────────────────┐
│ Fingerprint             aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa     │
│ Static file operations  12                                                                   │
│ Eligible                yes; explicit approval still required                                │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Separately reviewed forced plan ────────────────────────────────────────────────────────────┐
│ Fingerprint             aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa     │
│ Static file operations  12                                                                   │
│ Eligible                yes; explicit approval still required                                │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ External preview receipt ───────────────────────────────────────────────────────────────────┐
│ Location                                                                                     │
│ <preview-store>/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.json        │
│ Project bytes  unchanged; this receipt is not approval                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
$ liftoff update
! Liftoff core maintenance available: 0 core conflict(s); review the exact plans before approval
",
}
`;

exports[`maintenance presentation > snapshots rich update completion recommendation 1`] = `
{
  "code": 0,
  "err": "",
  "out": "┌─ LIFTOFF / UPDATE ───────────────────────────────────────────────────────────────────────────┐
│ Preview and explicitly approve scoped project updates                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Selected project ───────────────────────────────────────────────────────────────────────────┐
│ Root  <project>                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
! Warning: If this worktree has uncommitted changes, consider committing or copying them before applying. Liftoff does not commit automatically.
┌─ Review before approval ─────────────────────────────────────────────────────────────────────┐
│ • Effective normal plan: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa    │
│ • write ".liftoff/governance/context.json"                                                   │
│ • write "environments/staging/backend.env"                                                   │
│ • write "infrastructure/opentofu/azure/environments/staging/versions.tf"                     │
│ • write "infrastructure/opentofu/azure/environments/staging/.terraform.lock.hcl"             │
│ • write "infrastructure/opentofu/azure/environments/staging/providers.tf"                    │
│ • write "infrastructure/opentofu/azure/environments/staging/variables.tf"                    │
│ • write "infrastructure/opentofu/azure/environments/staging/main.tf"                         │
│ • write "infrastructure/opentofu/azure/environments/staging/outputs.tf"                      │
│ • write "infrastructure/opentofu/azure/environments/staging/backend.local.tf"                │
│ • write "infrastructure/opentofu/azure/environments/staging/backend.remote.example.tf"       │
│ • write "infrastructure/opentofu/azure/environments/staging/staging.tfvars"                  │
│ • write "liftoff.manifest.json"                                                              │
│ • Only this exact local plan is authorized; future provider actions require separate         │
│ approval.                                                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
◆: Apply safe Liftoff core changes
<project>
┌─ Applied Liftoff core changes ───────────────────────────────────────────────────────────────┐
│ • wrote .liftoff/governance/context.json                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
✓ Updated project: 1 core written, 0 core skipped
Next recommended command
────────────────────────
$ liftoff validate && liftoff doctor

",
}
`;

exports[`maintenance presentation > snapshots rich update drift 1`] = `
{
  "code": 2,
  "err": "",
  "out": "┌─ LIFTOFF / UPDATE ───────────────────────────────────────────────────────────────────────────┐
│ Preview and explicitly approve scoped project updates                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Selected project ───────────────────────────────────────────────────────────────────────────┐
│ Root  <project>                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project versions ───────────────────────────────────────────────────────────────────────────┐
│ Liftoff CLI           0.11.2                                                                 │
│ Project generated by  0.11.2                                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Liftoff core drift ─────────────────────────────────────────────────────────────────────────┐
│ Change  Artifact                          Reason                                             │
│ ──────  ────────────────────────────────  ────────────────────────────────────────────       │
│ ~       .liftoff/governance/context.json  untouched since generation; template changed       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project component provisioning: environment:staging ────────────────────────────────────────┐
│ • create environments/staging/backend.env  destination is absent                             │
│ • create infrastructure/opentofu/azure/environments/staging/versions.tf destination is       │
│ absent                                                                                       │
│ • create infrastructure/opentofu/azure/environments/staging/.terraform.lock.hcl destination  │
│ is absent                                                                                    │
│ • create infrastructure/opentofu/azure/environments/staging/providers.tf destination is      │
│ absent                                                                                       │
│ • create infrastructure/opentofu/azure/environments/staging/variables.tf destination is      │
│ absent                                                                                       │
│ • create infrastructure/opentofu/azure/environments/staging/main.tf  destination is absent   │
│ • create infrastructure/opentofu/azure/environments/staging/outputs.tf destination is absent │
│ • create infrastructure/opentofu/azure/environments/staging/backend.local.tf destination is  │
│ absent                                                                                       │
│ • create infrastructure/opentofu/azure/environments/staging/backend.remote.example.tf        │
│ destination is absent                                                                        │
│ • create infrastructure/opentofu/azure/environments/staging/staging.tfvars destination is    │
│ absent                                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Reviewed update plan ───────────────────────────────────────────────────────────────────────┐
│ Fingerprint             aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa     │
│ Static file operations  12                                                                   │
│ Eligible                yes; explicit approval still required                                │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Separately reviewed forced plan ────────────────────────────────────────────────────────────┐
│ Fingerprint             aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa     │
│ Static file operations  12                                                                   │
│ Eligible                yes; explicit approval still required                                │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ External preview receipt ───────────────────────────────────────────────────────────────────┐
│ Location                                                                                     │
│ <preview-store>/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.json        │
│ Project bytes  unchanged; this receipt is not approval                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
$ liftoff update
! Liftoff core maintenance available: 0 core conflict(s); review the exact plans before approval
",
}
`;
